# genshin-force-fps-rs

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rust-toolchain.toml
src/: lib.rs  logger.rs  main.rs  process.rs
src/process/: module.rs
