[package]
name = "genshin-force-fps"
version = "0.1.1"
authors = ["y0soro <y0soro@protonmail.com>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/y0soro/genshin-force-fps-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
lexopt = "0.2.1"
patternscan = "1.2.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
]

[build-dependencies]
embed-manifest = "1.3.1"
